Bug 489234 - Replace new Integer(int) with Integer.valueOf()
org.eclipse.jface 

Change-Id: I65beca7e9b4a151c26ef5c6e9935a06d4a0b0f54
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>